testdata/golden/sema/valid/entrypoint/argv_builtin.sg
// Test: @entrypoint("argv") with built-in types that have from_str is valid
@entrypoint("argv")
fn main(x: int, y: string) -> int {
    return x;
}
