testdata/golden/sema/invalid/variadic_overload_ambiguous.sg
fn f(...args: int) -> string {
    return "int";
}

@overload
fn f(...args: uint) -> string {
    return "uint";
}

fn main() {
    f();
}
